--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -108,6 +108,7 @@ header{
 
 
 .btn:visited,
+input[type=submit],
 .btn:link{
     display: inline-block;
     margin: 20px 40px 0 0px;
@@ -117,20 +118,26 @@ header{
     color: #fff;
     border-radius: 200px;
     border: 1px solid #1B9CFC;
-    transition: border 0.3s, background-color 0.3s;
+    text-align: center;
+    transition: border 0.3s, background-color 0.3s, color 0.3s;
     
 }
 
 
+
 .btn-full:link,
-.btn-full:visited{
+.btn-full:visited,
+input[type=submit]{
     background-color: #1B9CFC;
     
 }
 
 
+input[type=submit]:hover,
+input[type=submit]:active,
 .btn-full:hover,
 .btn-full:active{
+    color: #fff;
     background-color: #0379d0;
     border: 1px solid #0379d0;
 }
@@ -250,7 +257,7 @@ header{
 
 hr{
     border: 0;
-    width: 20%;
+    width: 30%;
     height: 2px;
     margin: 20px auto 25px auto;
     background-image: linear-gradient(to right, rgb(27, 156, 252, 0), rgb(27, 156, 252, 0.75), rgb(27, 156, 252, 0));
@@ -375,7 +382,7 @@ hr{
 
 .section-testimonials{
     padding: 80px 0;
-    height: 480px;
+    height: 500px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.65),rgba(0, 0, 0, 0.65)), url(img/testimonials-banner.jpg);
     background-size: cover;
     background-position: center;
@@ -385,7 +392,7 @@ hr{
 }
 
 blockquote{
-    margin-top: 40px;
+    margin-top: 60px;
     padding: 2%;
     font-style: italic;
     position: relative;
@@ -415,8 +422,32 @@ blockquote:before{
 /*  CONTACT */
 /*----------------------------------*/
 
+
+
 .section-contact{
-    height: 500px;
+    margin: 80px auto;
+}
+
+.contact-form{
+    width: 60%;
+    margin: 25px auto 0 auto;
 }
 
 
+input[type=text],
+input[type=email],
+select{
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+input[type=submit]{
+    width: 150px;
+    margin-top: 25px;
+}
+
+*:focus {
+    outline: none;
+}
