--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -450,3 +450,106 @@ input[type=submit]{
 *:focus {
     outline: none;
 }
+
+
+
+
+/*----------------------------------*/
+/*  footer */
+/*----------------------------------*/
+
+
+footer{
+    padding: 40px 45px 30px 45px;
+    background-color: #2c2c2c;
+    font-size: 80%;
+}
+
+footer row{
+}
+
+
+.footer-nav{
+    list-style: none;
+    float: left;
+    height: 29px;   /*SET FOR VERTICAL ALIGNMENT OF LINKS -1*/
+}
+
+
+.social-icons{
+    list-style: none;
+    float: right;
+}
+
+
+.footer-nav li{
+    margin: 5px 0;   /*SET FOR VERTICAL ALIGNMENT OF LINKS -2*/
+}
+
+.footer-nav li,
+.social-icons li{
+    display: inline-block;
+    margin-right: 20px;
+    text-decoration: none;
+}
+
+
+.footer-nav li:last-child,
+.social-icons li:last-child{
+    margin-right: 0;
+}
+
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-icons li a:link,
+.social-icons li a:visited{
+    text-decoration: none;
+    border: 0;
+    color: #888;
+    transition: color 0.3s; 
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active,
+.social-icons li a:hover,
+.social-icons li a:active{
+    color: #ddd;
+}
+
+footer p{
+    color: #888;
+    text-align: center;
+    font-size: 110%;
+    margin-top: 15px;
+}
+
+.social-icons li a:link,
+.social-icons li a:visited{
+    font-size: 160%;
+    
+}
+
+.ion-logo-facebook,
+.ion-logo-twitter,
+.ion-logo-googleplus,
+.ion-logo-isntagram{
+    transition: color 0.3s;
+}
+
+.ion-logo-facebook:hover{
+    color: #3b5998;
+}
+
+.ion-logo-twitter:hover{
+    color: #00aced;
+}
+
+.ion-logo-googleplus:hover{
+    color: #dd4b39;
+}
+
+.ion-logo-instagram:hover{
+    color: #fb3958;
+}
+
