--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,7 @@
 /*  BASE COLOUR: #1b9cfc  */
 /*  BASE COLOUR-DARK: #0379d0  */
+/*  BASE COLOUR-LIGHT: #90cffe  */
+
 
 /*----------------------------------*/
 /*  BASIC SETUP */
@@ -82,13 +84,17 @@ h3{
 
 
 header{
-    background-image:linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(img/banner-1.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(img/hero-image.jpg);
     height: 100vh;
     width: 99vw;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     
+}
+
+.global-header{
+    transition: background 1s linear;
 }
 
 
@@ -98,6 +104,7 @@ header{
     margin-left: 25px;
     top: 45%;
     left: 12%;
+    
 }
 
 
@@ -274,7 +281,7 @@ hr{
 /*----------------------------------*/
 /*  PHOTO GRID */
 /*----------------------------------*/
-
+/*
 .section-grid{
     padding: 0;
     height: auto;
@@ -287,10 +294,25 @@ hr{
 
 .showcase li{
     display: block;
-    float: left;
     width: 25%;
 }
-
+.showcase li:nth-child(1){
+    float:left;
+}
+.showcase li:nth-child(2){
+    float: right;
+}
+.showcase li:nth-child(3){
+    transform: scale(2);
+    float: right;
+}
+.showcase li:nth-child(4){
+    margin-top: 350px;
+    float:right;
+}
+.showcase li:nth-child(5){
+    float: right;
+}
 .showcase-photo{
     width: 100%;
     margin: 0;
@@ -314,8 +336,115 @@ hr{
     transform: scale(1.03);
     opacity: 1;
 }
+*/
+
+.hero-text-box{
+    position: absolute;
+    width 1140px;
+    margin-left: 25px;
+    top: 45%;
+    left: 12%;
+    
+    transition: 0.6s ease;
+}
+
+.hero-text {
+    position: relative;
+    z-index: 0;
+    transition: 0.6s ease;
+    display: none;
+}
+.section-banners{
+    height: 100vh;
+    position: relative;
+    background-color: #000;
+}
+
+.banner-container{
+    height: 100vh;
+}
 
 
+.section-banners nav{
+    position: relative;
+    z-index: 100;
+    height: 0px;
+    overflow-y: visible;
+    opacity: 1;
+}
+
+.banners{
+    background-attachment: fixed;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.section-banners h3{
+    margin-bottom: 40px;
+}
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 300%;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+.test{
+  position: absolute;
+  top: 0%;
+  color: white;
+  font-size: 300%;
+  border-radius: 0 3px 3px 0;
+
+}
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #90cffe;
+  border-radius: 50%;
+  display: inline-block;
+  transition: 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #0379d0;
+}
+
+.section-banners  .fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1 }
+}
 
 
 
@@ -381,7 +510,7 @@ hr{
 
 .section-testimonials{
     padding: 80px 0;
-    height: 500px;
+    height: 480px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.65),rgba(0, 0, 0, 0.65)), url(img/testimonials-banner.jpg);
     background-size: cover;
     background-position: center;
@@ -552,4 +681,6 @@ footer p{
 .ion-logo-instagram:hover{
     color: #fb3958;
 }
+
+
 
