Added animations to Facilities page

--- a/resources/css/style-facilities.css
+++ b/resources/css/style-facilities.css
@@ -421,9 +421,12 @@ input[type=submit]:active,
     padding: 70px 15px 60px 15px;
 }
 
-.section-faq h2{
+.flipdown-ani{
     animation: flipdown 0.5s ease both;
-
+    
+}
+.section-faq h2{
+    opacity: 0;
 }
 .section-faq .row{
     width: 60%;
@@ -462,8 +465,7 @@ input[type=submit]:active,
 .section-faq li{
     margin-bottom: 25px;
     position: relative;
-    animation: flipdown 0.25s ease both;
-
+    opacity: 0;
 }
     .section-faq li:nth-of-type(1){    
           animation-delay: 0.5s;
