--- a/resources/css/style-form.css
+++ b/resources/css/style-form.css
@@ -364,241 +364,12 @@ input[type=submit]:active,
 }
 
 
-/*----------------------------------*/
-/*  FACILITIES */
-/*----------------------------------*/
-
-
-.section-facilities div{
-    padding: 5px;
-}
-
-.section-facilities .col{
-    width: 80%;
-    display: block;
-    float: center;
-    margin:1.6% 8%;
-    padding: 0 20px;
-}
-
-.section-facilities h3{
-    color: #0379d0;
-    text-align: center;
-    font-size: 130%;
-    text-transform: uppercase;
-    margin-bottom: 15px;
-    line-height: 1.15;
-}
-
-.section-facilities p{
-    font-size: 110%;
-    text-align:center;
-    line-height: 145%;
-    word-spacing: 2px;
-}
-
-
-.learn-more{
-    font-size: 130%;
-    margin-top: 20px;
-    font-weight: 300;
-    text-align: center;
-    word-spacing: 2px;
-    padding-bottom: 0;
-}
-
-
-
 
 /*----------------------------------*/
-/*  FAQ */
+/*  FORM */
 /*----------------------------------*/
 
 
-.section-faq{
-    background-color: #fcfcfc;
-    height: auto;
-    padding: 70px 15px 60px 15px;
-}
-
-.flipdown-ani{
-    animation: flipdown 0.5s ease both;
-    
-}
-.section-faq h2{
-    opacity: 0;
-}
-.section-faq .row{
-    width: 60%;
-}
-.section-faq hr{
-    margin-bottom: 35px;
-}
-    
-.section-faq i{
-      position: absolute;
-      transform: translate( -6px , 0 );
-      margin-top: 15px;
-      margin-right: -40px;
-      right: 0;
-      height: 20px;
-        width: 20px;
-}
-.section-faq .faq-question{
-    font-size: 110%;
-    margin-left: 15px;
-    color: #484848;
-    margin-bottom: 13px;
-    user-select: none;
-    cursor: pointer;
-}
-.section-faq .faq-answer{
-    position: relative;
-    overflow: hidden;
-    max-height: 800px;
-    transition: all 0.25s ease-in-out;    
-    opacity: 1;
-    transform: translate( 0 , 0 );
-    z-index: 2;
-}
-
-
-.section-faq li{
-    margin-bottom: 25px;
-    position: relative;
-    opacity: 0;
-}
-    .section-faq li:nth-of-type(1){    
-          animation-delay: 0.5s;
-    }
-    .section-faq li:nth-of-type(2){    
-          animation-delay: 0.75s;
-    }
-    .section-faq li:nth-of-type(3){    
-          animation-delay: 1s;
-    }
-    .section-faq li:nth-of-type(4){    
-          animation-delay: 1.25s;
-    }
-    .section-faq li:nth-of-type(5){    
-          animation-delay: 1.5s;
-    }
-    .section-faq li:nth-of-type(6){    
-          animation-delay: 1.75s;
-    }
-    .section-faq li:nth-of-type(7){    
-          animation-delay: 2s;
-    }
-    .section-faq li:nth-of-type(8){    
-          animation-delay: 2.25s;
-    }
-    .section-faq li:nth-of-type(9){    
-          animation-delay: 2.5s;
-    }
-    .section-faq li:nth-of-type(10){    
-          animation-delay: 2.75s;
-    }
-    .section-faq li:nth-of-type(11){    
-          animation-delay: 3s;
-    }
-    .section-faq li:nth-of-type(12){    
-          animation-delay: 3.25s;
-    }
-    .section-faq li:nth-of-type(13){    
-          animation-delay: 3.5s;
-    }
-    .section-faq li:nth-of-type(14){    
-          animation-delay: 3.75s;
-    }
-    .section-faq li:nth-of-type(15){    
-          animation-delay: 4s;
-    }
-    .section-faq li:nth-of-type(16){    
-          animation-delay: 4.25s;
-    }
-    .section-faq i:before, 
-    .section-faq i:after{
-        content: "";
-        transition: all 0.25s ease-in-out;
-        position: absolute;
-        background-color: #1b9cfc;
-        width: 3px;
-        height: 9px;
-    }
-    .section-faq i:before{
-        transform: translate( -2px , 0 ) rotate( 45deg ); 
-    }   
-    .section-faq i:after{
-        transform: translate( 2px , 0 ) rotate( -45deg );
-
-    }
-
-    .section-faq input[type=checkbox]
-      {
-          position: absolute;
-          cursor: pointer;
-          width: 100%;
-          height: 100%;
-          z-index: 1;
-          opacity: 0;
-        }
-      
-     .section-faq input[type=checkbox]:checked ~ .faq-answer
-          {
-              margin-top: 0;
-              max-height: 0;
-              opacity: 0;
-              transform: translate( 0 , 50% );
-            }
-            
-      .section-faq input[type=checkbox]:checked ~ i:before{
-                transform: translate( 2px , 0 ) rotate( 45deg )
-        }
-          
-        .section-faq input[type=checkbox]:checked ~ i:after{
-            transform: translate( -2px , 0 ) rotate( -45deg )
-        }
-
-
-.section-faq h3{
-    margin-top: 40px;
-}
-.section-faq ul{
-    list-style: none;
-}
-
-.section-faq .faq-question:before {
-    content: "• ";
-}
-@keyframes flipdown
-{
-    0%{
-        opacity: 0;
-        transform-origin: top center;
-        transform: rotateX(-90deg);
-    }
-
-    5%{
-        opacity: 1;
-
-    }
-    80%{
-        transform: rotateX(8deg);
-
-    }
-    83%{
-        transform: rotateX(6deg);
-
-    }
-    92%{
-        transform: rotateX(-3deg);
-
-    }
-    100%{
-        transform: rotateX(0deg) ;
-        transform-origin: top center;
-    }
-}
 
 
 
