--- a/resources/css/style-form.css
+++ b/resources/css/style-form.css
@@ -31,6 +31,10 @@ p{
     font-weight: 300;
 }
 
+*:focus {
+    outline: none;
+}
+
 /*----------------------------------*/
 /*  REUSABLE COMPONENTS */
 /*----------------------------------*/
@@ -214,7 +218,6 @@ header  .fade {
 
 
 .btn:visited,
-input[type=submit],
 .btn:link{
     display: inline-block;
     margin: 20px 40px 0 0px;
@@ -230,15 +233,12 @@ input[type=submit],
 }
 
 .btn-full:link,
-.btn-full:visited,
-input[type=submit]{
+.btn-full:visited{
     background-color: #1B9CFC;
     
 }
 
 
-input[type=submit]:hover,
-input[type=submit]:active,
 .btn-full:hover,
 .btn-full:active{
     color: #fff;
@@ -249,11 +249,9 @@ input[type=submit]:active,
 
 .btn-ghost:hover,
 .btn-ghost:active{
-    color: #fff;
-    background-color: #0379d0;
-    border: 1px solid #0379d0;
-    
+    width: 1000%;
 }
+
 
 
 
@@ -374,53 +372,87 @@ input[type=submit]:active,
     left: 20%;
 }
 
-.main-form input[type=submit]{
-    position: relative;
+.submitButton{
+    padding: 10px 22px;
+    text-decoration: none;
+    font-weight: 300;
+    background-color: #1B9CFC;
+    color: #fff;
+    border-radius: 200px;
+    border: 1px solid #1B9CFC;
+    text-align: center;
+    transition: border 0.3s, background-color 0.3s, color 0.3s;
+    display: block;
     width: 20%;
-    left: 40%;
-    margin-right: 0;
+    margin: 10px auto;
+}
+
+.submitButton:nth-of-type(2){
+    background-color: #fff;
+    color: #1B9CFC;
+}
+.main-form .submitButton:hover,
+.main-form .submitButton:active{
+    color: #fff;
+    background-color: #0379d0;
+    border: 1px solid #0379d0;
+}
+/*          P1          */
+
+.p1 input{
+    width: 70%;
+    padding-left: 5px;
 }
 
 
 /*          P2          */
 
+.p2 h3{
+    margin-bottom: 25px;
+}
+
+.p2 .span-1-of-3{
+    margin-top: 15px;
+}
+
 .p2 select{
-    position: relative;
-    width: 50%;
+    width: 35%;
+    display: block;
+    margin: 10px auto;
+}
+.p2 .priority3{
+    margin-bottom: 20px;
+}
+
+
+/*          P3          */
+
+.p3 h3{
+    margin-bottom: 25px;
+}
+
+.p3 select{
+    display: block;
+    width: 35%;
+    margin: 10px auto;
+}
+
+.p3 .softwares3{
+    margin-bottom: 20px;
+}
+
+
+/*        p4         */
+
+.p4 h3{
+    font-size: 150%;
+    margin-bottom: 10px;
+}
+.p4 p{
+    font-size: 110%;
     text-align: center;
-    left: 25%;
+    margin-bottom: 25px;
 }
-
-
-
-/*----------------------------------*/
-/*  CONTACT */
-/*----------------------------------*/
-
-.contact-form{
-    width: 60%;
-    margin: 25px auto 0 auto;
-}
-
-
-input[type=text],
-input[type=email],
-select{
-    width: 100%;
-    padding: 7px;
-    border-radius: 3px;
-    border: 1px solid #ccc;
-}
-
-input[type=submit]{
-    width: 125px;
-    margin-top: 25px;
-}
-
-*:focus {
-    outline: none;
-}
-
 
 
 
