--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -121,6 +121,7 @@ header nav{
 
 .banners{
     background-attachment: fixed;
+    background-position: center;
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -380,7 +381,7 @@ input[type=submit]:active,
 /*----------------------------------*/
 
 .section-why-us{
-    padding: 70px 0 60px 0;
+    padding: 60px 0;
     background-color: #fcfcfc;
 }
 
